hphp/test/zend/bad/Zend/tests/variadic/adding_additional_optional_parameter.php
<?php

interface DB {
    public function query($query, string ...$params);
}

class MySQL implements DB {
    public function query($query, string $extraParam = null, string ...$params) { }
}

?>
===DONE===
